Switch to java 16